--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <head>
+  <!-- include js -->
+  <script type="text/javascript" src="script.js"></script>
+
+  <!-- include css -->
+  <link href="styles.css" rel="stylesheet">
 </head>
+
+
 <body>
 </body>
