html structure set up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <link href="styles.css" rel="stylesheet">
 </head>
 
-
 <body>
+<div id = "page">
+
+  <div id = "navBar">
+    <div id = "logo"></div>
+    <div id = "searchBar"></div>
+    <div id = "myProfile"></div>
+  </div>
+
+<div id = "projectCard">
+  <div id = "bookmark"></div>
+</div>
+
+
+</div>
 </body>
