html structure set up

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 <body>
 <div id = "page">
 
-  <div id = "navBar">
+  <div class = "navBar">
     <div id = "logo"></div>
-    <div id = "searchBar"></div>
-    <div id = "myProfile"></div>
+    <div class = "searchBar"></div>
+    <div class = "myProfile"></div>
   </div>
 
-<div id = "projectCard">
-  <div id = "bookmark"></div>
-</div>
-
+  <div id = "projects">
+    <div class = "projectCard">
+      <h2 class= "title"></h2>
+      <div class = "bodyText"></div>
+      <div class = "bookmark"></div>
+      <div class = "usersInAProject"></div>
+    </div>
+  </div>
 
 </div>
 </body>
