project card css beginnings

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <div id = "projects">
     <div class = "projectCard">
-      <h2 class= "title"></h2>
-      <div class = "bodyText"></div>
+      <h2 class= "title">Project Title</h2>
+      <div class = "bodyText">This is body text text text lovely body text. It is about this project, it is a few sentences. It gives a description about the project.</div>
       <div class = "bookmark"></div>
       <div class = "usersInAProject"></div>
     </div>
