--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
   <div class = "navBar">
     <div id = "logo"></div>
-    <div class = "searchBar"></div>
+    <div class = "searchBar">
+      <div id = "searchIcon"></div>
+      <p id="searchRestState">search</p>
+    </div>
+
     <div class = "myProfile"></div>
   </div>
 
   <div id = "projects">
     <div class = "projectCard">
-      <h2 class= "title"></h2>
-      <div class = "bodyText"></div>
+      <h2 class= "title">Project Title</h2>
+      <div class = "bodyText">This is body text text text lovely body text. It is about this project, it is a few sentences. It gives a description about the project.</div>
       <div class = "bookmark"></div>
       <div class = "usersInAProject"></div>
     </div>
