--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">My Projects</a>
+        <a class="nav-link" href="#">ALL PROJECTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">ACTIVITY FEED</a>
       </li>
       <li class="nav-item">
         <button type="button" class="btn btn-primary ml-auto" data-toggle="modal" data-target="#signIn">Sign In
@@ -45,7 +48,7 @@
     <!---Info / Create New Projects --->
     <div class="d-flex px-3 py-1 pt-md-3 pb-md-3 mx-auto">
       <div class="p-2">All Projects</div>
-      <div class="p-2 text-secondary">123 Projects</div>
+      <small class="p-2">123 Projects</small>
       
       <button type="button" class="btn btn-raised btn-primary ml-auto " data-toggle="modal" data-target="#newProject">Create New Project
       </button>   
