Text styles added :)

--- a/ales-css-test.html
+++ b/ales-css-test.html
@@ -23,11 +23,11 @@
   <div id="navbar-topline"></div>
   <div id="my-profile">
     <div id="my-profile-pic"></div>
-    <div id="my-profile-name">Sanjana R.</div>
+    <div id="my-profile-name"><button-text>Sanjana R.</button-text></div>
     </div>
   <div id="logo"></div>
-  <div id="nav-item-1">All Projects</div>
-  <div id="nav-item-2">Activity</div>
+  <div id="nav-item-1"><button-text>All Projects</button-text></div>
+  <div id="nav-item-2"><button-text>Activity</button-text></div>
 
 
 
