--- a/ales-css-test.html
+++ b/ales-css-test.html
@@ -15,6 +15,11 @@
     <!-- Material Design for Bootstrap CSS -->
     <link rel="stylesheet" href="css/main.css">
 
+<!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500" rel="stylesheet">
+<!-- Typekit -->
+<link rel="stylesheet" href="https://use.typekit.net/hns7pdu.css">
+
     <title>Creativity Kernel</title>
   </head>
 
