--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
 
                           <tbody>
                             <tr>
-                              <th scope="row"><img src="http://via.placeholder.com/50x50"></th>
+                                <th scope="row"><h4 id="num_likewish">-1</h4><p class="caption">/20</p></th>
                               <td class="subtitle-1 align-middle">Likes and Wishes</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
@@ -66,7 +66,7 @@
 
                            </tr>
                            <tr>
-                              <th scope="row"><img src="http://via.placeholder.com/50x50"></th>
+                              <th scope="row"><h4 id="num_opportunity">-1</h4><p class="caption">/4</p></th>
                               <td class="subtitle-1 align-middle">Opportunities</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
@@ -75,11 +75,11 @@
                            </tr>
                            </tbody>
                         </table>
-                       <div class="subtitle-2 mt-3 ml-1">Needfinding</div>
+                       <div class="subtitle-2 mt-3 ml-1">Ideation</div>
                         <table class="table">
                           <tbody>
                             <tr>
-                              <th scope="row"><img src="http://via.placeholder.com/50x50"></th>
+                              <th scope="row"><h4 id="num_idea">-1</h4><p class="caption">/200</p></th>
                               <td class="subtitle-1 align-middle">Cheatstorming</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
@@ -88,7 +88,7 @@
 
                            </tr>
                            <tr>
-                              <th scope="row"><img src="http://via.placeholder.com/50x50"></th>
+                              <th scope="row"><h4>0</h4></th>
                               <td class="subtitle-1 align-middle">Voting</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
@@ -96,7 +96,7 @@
                               </td>
                            </tr>
                            <tr>
-                              <th scope="row"><img src="http://via.placeholder.com/50x50"></th>
+                              <th scope="row"><h4>0</h4></th>
                               <td class="subtitle-1 align-middle">Concept Development</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
