change to one buttom per module

--- a/project.html
+++ b/project.html
@@ -60,8 +60,7 @@
                                 <th scope="row"><h4 id="num_likewish">-1</h4><p class="caption">/20</p></th>
                               <td class="subtitle-1 align-middle">Likes and Wishes</td>
                               <td class="align-middle d-flex justify-content-end">
-                                  <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
-                                  <button type="button" class="btn btn-primary button-text">JOIN</button>
+                                  <button type="button" class="btn btn-primary button-text">START</button>
                               </td>
 
                            </tr>
@@ -70,7 +69,6 @@
                               <td class="subtitle-1 align-middle">Opportunities</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
-                                  <button type="button" class="btn btn-primary button-text" disabled>JOIN</button>
                               </td>
                            </tr>
                            </tbody>
@@ -83,7 +81,6 @@
                               <td class="subtitle-1 align-middle">Cheatstorming</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
-                                  <button type="button" class="btn btn-primary button-text" disabled>JOIN</button>
                               </td>
 
                            </tr>
@@ -92,7 +89,6 @@
                               <td class="subtitle-1 align-middle">Voting</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
-                                  <button type="button" class="btn btn-primary button-text" disabled>JOIN</button>
                               </td>
                            </tr>
                            <tr>
@@ -100,7 +96,6 @@
                               <td class="subtitle-1 align-middle">Concept Development</td>
                               <td class="align-middle d-flex justify-content-end">
                                   <button type="button" class="btn btn-primary button-text" disabled>VIEW</button>
-                                  <button type="button" class="btn btn-primary button-text" disabled>JOIN</button>
                               </td>
                            </tr>
                            </tbody>
