adding new changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 <div class="menu">
   <a href="">all projects</a>
   <a>Sign In</a>
-
 </div>
 </div>
 <div class="main-content">
@@ -107,9 +106,9 @@
 
       <!--- Right Column / Stages --->
                 <div class="col-md-9 right-section">
-                 <h4 id="project_title">(PLACEHOLDER)</h4>
-                 <div class="body-1" id="project_description">(PLACEHOLDER)</div>
-                 <div class="caption" id="project_date">(PLACEHOLDER)</div>
+                 <h4 id="project_title"></h4>
+                 <div class="body-1" id="project_description"></div>
+                 <div class="caption" id="project_date"></div>
 
 
                      <div class="subtitle-2 mt-3 ml-1">Needfinding</div>
@@ -118,7 +117,7 @@
 
                             <tbody>
                               <tr>
-                                <th scope="row"><h4 id="num_likewish">-1</h4><p class="caption">/20</p></th>
+                                <th scope="row"><h4 id="num_likewish">0</h4><p class="caption">/20</p></th>
                                 <td class="subtitle-1 align-middle">Likes and Wishes</td>
                                 <td class="align-middle d-flex justify-content-end">
                                     <button id="valuesview" type="button" class="btn btn-primary button-text">VIEW</button>
@@ -127,7 +126,7 @@
 
                              </tr>
                              <tr>
-                                <th scope="row"><h4 id="num_opportunity">-1</h4><p class="caption">/4</p></th>
+                                <th scope="row"><h4 id="num_opportunity">0</h4><p class="caption">/4</p></th>
                                 <td class="subtitle-1 align-middle">Opportunities</td>
                                 <td class="align-middle d-flex justify-content-end">
                                     <button id="opview" type="button" class="btn btn-primary button-text" >VIEW</button>
@@ -151,7 +150,7 @@
                           <table class="table">
                             <tbody>
                               <tr>
-                                <th scope="row"><h4 id="num_idea">-1</h4><p class="caption">/200</p></th>
+                                <th scope="row"><h4 id="num_idea">0</h4><p class="caption">/200</p></th>
                                 <td class="subtitle-1 align-middle">Cheatstorming</td>
                                 <td class="align-middle d-flex justify-content-end">
                                     <button id="cheatview" type="button" class="btn btn-primary button-text" >VIEW</button>
