resolving issues 2 and 3

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </nav> -->
 
 <div class="navibar">
-<div><h5>The Creativity Kernel</h5></div>
+<div><h5><a href="landing.html">The Creativity Kernel</a></h5></div>
 
 <div class="menu">
   <a href="">all projects</a>
