--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -10,13 +10,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/ztc2siz.css">
+
 
     <!-- Material Design for Bootstrap fonts and icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 
     <!-- Material Design for Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap-material-design.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="bootstrap-material-design.min.css">
+    <link rel="stylesheet" href="main.css">
 
 
 
@@ -27,37 +29,18 @@
   </head>
 
    <body>
-    <!--- NAV BAR ON TOP --->
-    <!---Three compoents: Brand/My Project/Sign In--->
-   <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Creativity Kernel</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">ALL PROJECTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">ACTIVITY FEED</a>
-      </li>
-      <li class="nav-item">
-        <button type="button" class="btn btn-primary ml-auto" data-toggle="modal" data-target="#signIn">Sign In
-      </button>
-      </li>
-
-    </ul>
-  </div>
-</nav> -->
-
 <div class="navibar">
 <div><h5><a href="landing.html">The Creativity Kernel</a></h5></div>
 
 <div class="menu">
   <a href="">all projects</a>
-  <a id ="sign-in-button" href="">Sign In</a>
+  <a id ="sign-in-button" href="">Log In</a>
+  <div id ="avatar">
+      <img id ="avatar_img">
+        <h4 id ="avatar_nickname"></h4>
+        <a id ="sign-out-button" href="">Log Out</a>
+  </div>
+
 </div>
 </div>
 <div class="main-content">
@@ -68,22 +51,27 @@
 
 
     <div class= "all-projects page center">
-      <div class="d-flex px-3 py-1 pt-md-3 pb-md-3 mx-auto">
 
-        <button type="button" class="btn btn-raised btn-primary ml-auto "
-        data-toggle="modal" data-target="#newProject">Create New Project</button>
-      </div>
 
-      <div>
-        <h4 style="margin-bottom:20px;">All Projects</h4>
-      </div>
+
       <div class="projects-list">
+        <div class="d-flex px-3 py-1 pt-md-3 pb-md-3 mx-auto">
+
+          <button type="button" class="btn btn-raised btn-primary ml-auto "
+          data-toggle="modal" data-target="#newProject">Create New Project</button>
+        </div>
+        <div>
+          <h4 style="margin-bottom:20px;">All Projects</h4>
+        </div>
+
           <script id="projects-template" type="x-handlebars-template">​
             {{#each this}}
                 <div data-index="{{_id}}" class="project-card">
                       <h5>{{Title}}</h5>
                       <p class="card-text">{{Description}}</p>
-                      <small class="text-muted">{{Participants.length}} People is working on it</small>
+                      <div class="people-list">
+                        <small class="text-muted">{{Participants.length}} people active</small>
+                      </div>
                     </div>
             {{/each}}
           </script> 
@@ -99,14 +87,14 @@
      <!---Left Column / Participants and Activity --->
 
               <div class="col-md-3 left-section">
-                  <div class="caption" id="active_participants">people active</div>
+                  <!-- <div class="caption" id="active_participants">people active</div>
                   <hr>
                   <h6>Activity</h6>
                   <p>...</p>
                   <p>...</p>
                   <p>...</p>
                   <p>...</p>
-                  <p>...</p>
+                  <p>...</p> -->
              </div>
 
       <!--- Right Column / Stages --->
@@ -347,13 +335,13 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery.slim.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap-material-design.js"></script>
+    <script src="jquery.slim.min.js"></script>
+    <script src="popper.js"></script>
+    <script src="bootstrap-material-design.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script>$(document).ready(function() {
       $('body').bootstrapMaterialDesign();
     });
