--- a/landing.html
+++ b/landing.html
@@ -49,8 +49,8 @@
         <!---2nd row: Explanation / Button --->
         <div class="row">
             <div class="col mt-5">
-                <h4>Solve future problems.</h4>
-                <p class="subtitle-1">We provide public access to open design tools that activate distributed communities to solve them.</p>
+                <h4>Imagine and activate the future</h4>
+                <p class="subtitle-1">We provide public access to open design tools that activate distributed communities. Together, we generate and evaluate possibliites and ideas to make them real. And then we get to work.</p>
                 <a href="index.html"><button type="button" class="btn btn-raised btn-primary button-text">EXPLORE PROJECTS</button></a>
             </div>
             <div class="col">
